# Modelling-Zebrafish-Heart

./: .gitignore  README.md  pyproject.toml  requirements.txt
knowledge/: _table_of_contents.md  actin_filaments.md  active_nematics.md  ising_model.md  lbm.md  mcmh.md  planning.md  sarcomere.md  stress_strain.md
src/: generate.py  peek.py  simulate.py  visualise.py
src/data/ising_data/: ising_data_2026_01_13T14_41_24_770892.npz  ising_data_2026_01_13T14_42_42_165930.npz  ising_data_2026_01_13T15_32_24_373639.npz  ising_data_2026_01_13T15_34_46_984687.npz  ising_data_2026_01_18T18_57_34_823318.npz  ising_data_2026_01_22T14_45_16_933723.npz
src/data/xy_data/: xy_data_2026_01_22T12_47_45_610673.npz  xy_data_2026_01_22T14_34_29_231454.npz
src/modelling/: __init__.py  ising_model.py  nematic_model.py  quadratic_model  quadratic_model.py  quartic_model.py  symmetric_models.py  xy_model.py
src/visualisation/: animate.py  graph.py  utilities.py
